--- a/firstweb/myapp/template/myapp/allproduct.html
+++ b/firstweb/myapp/template/myapp/allproduct.html
@@ -1,23 +1,45 @@
 {% extends 'myapp/base.html' %}
-  
+
 {% block content %}
 
-  <h3>สินค้าทั้งหมดในร้าน</h3>
-  <p>ตอนนี้เรามีสินค้าให้เลือกชมหลายรายการ</p>
-
-  <div class="row">
+<h3>สินค้าทั้งหมดในร้าน</h3>
+<p>ตอนนี้เรามีสินค้าให้เลือกชมหลายรายการ</p>
+<div class="row">
   {% for pd in product %}
   <div class="col-sm-4">
-  <div class="card" style="width:300px">
-    <img class="card-img-top" src="{{ pd.imageurl }}" width="400">
-    <div class="card-body">
-    <h1 class="card-title">{{ pd.name }}</h1>
-    <p>{{ pd.price }} บาท</p>
-    <p>{{ pd.detail }}</p>
-    <button class="btn btn-primary" type="submit">สั่งซื้อ</button>
+    <div class="card mb-4">
+      {% if pd.image %}
+      <img class="card-img-top" src="{{ pd.image.url }}">
+      {% elif pd.imageurl != None %}
+      <img class="card-img-top" src="{{ pd.imageurl }}">
+      {% else %}
+      <img class="card-img-top" src="/media/default.png">
+      {% endif %}
+      <div class="card-body">
+        <h1 class="card-title">{{ pd.name }}</h1>
+        <p>{{ pd.price }} บาท/{{ pd.unit }}</p>
+        <p>{{ pd.detail|linebreaks|truncatechars_html:100}}</p>
+        {% if pd.quantity > 0 %}
+        <p>สินค้ามีในสต็อค: {{ pd.quantity}} {{ pd.unit }}</p>
+        {% else %}
+        <p>
+          <font color="red">สินค้าอาจจะหมดสต็อค กรุณาติดต่อแอดมิน</font>
+        </p>
+        {% endif %}
+        {% if pd.instock == True %}
+
+        {% if user.is_authenticated %}
+        <a href="{% url 'addtocart-page' pd.id %}" class="btn btn-success" type="submit">สั่งซื้อ</a>
+        {% else %}
+        <a href="{% url 'login' %}" class="btn btn-success" type="submit">สั่งซื้อ</a>
+        {% endif %}
+
+        {% else %}
+        <a class="btn btn-warning" type="submit">สินค้าหมด</a>
+        {% endif %}
+      </div>
+      <br><br>
     </div>
-    </div>
-    <br><br>
   </div>
   {% endfor %}
 </div>
